; ModuleID = '/home/carl/AnghaBench/git/extr_pack-bitmap-write.c_find_object_pos.c'
source_filename = "/home/carl/AnghaBench/git/extr_pack-bitmap-write.c_find_object_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.object_id = type { i32 }
%struct.object_entry = type { i32 }

@writer = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [88 x i8] c"Failed to write bitmap index. Packfile doesn't have full closure (object %s is missing)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*)* @find_object_pos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_object_pos(%struct.object_id* %0) #0 {
  %2 = alloca %struct.object_id*, align 8
  %3 = alloca %struct.object_entry*, align 8
  store %struct.object_id* %0, %struct.object_id** %2, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @writer, i32 0, i32 0), align 4
  %5 = load %struct.object_id*, %struct.object_id** %2, align 8
  %6 = call %struct.object_entry* @packlist_find(i32 %4, %struct.object_id* %5)
  store %struct.object_entry* %6, %struct.object_entry** %3, align 8
  %7 = load %struct.object_entry*, %struct.object_entry** %3, align 8
  %8 = icmp ne %struct.object_entry* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load %struct.object_id*, %struct.object_id** %2, align 8
  %11 = call i32 @oid_to_hex(%struct.object_id* %10)
  %12 = call i32 @die(i8* getelementptr inbounds ([88 x i8], [88 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @writer, i32 0, i32 0), align 4
  %15 = load %struct.object_entry*, %struct.object_entry** %3, align 8
  %16 = call i32 @oe_in_pack_pos(i32 %14, %struct.object_entry* %15)
  ret i32 %16
}

declare dso_local %struct.object_entry* @packlist_find(i32, %struct.object_id*) #1

declare dso_local i32 @die(i8*, i32) #1

declare dso_local i32 @oid_to_hex(%struct.object_id*) #1

declare dso_local i32 @oe_in_pack_pos(i32, %struct.object_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
